tobago-theme/src/main/scss/_tobago.scss
/* ... */
/* box -------------------------------------------------------------- */

tobago-box {
  > .card-body {
    overflow-x: hidden;
    overflow-y: auto;
  }
}

.tobago-box-header {
  display: flex;
  justify-content: space-between;
  align-content: center;
}

.card-header {

  > h3:first-child {
    margin-bottom: 0;
    align-self: center;
  }

  .navbar {
    padding: 0;
  }
}

.tobago-button {
  @include imageTextSpacing();
  @include badgeBtn();
  @include markupHideToggleIcon();

  &.badge {
    @each $color, $value in $theme-colors {
      &.btn-#{$color} {
        --#{$prefix}badge-color: #{color-contrast($value)};
      }
    }
  }
}

button.tobago-button {
}

tobago-buttons {
  > .tobago-button {
    display: inline-block;
  }

  > tobago-dropdown:last-child > .tobago-button.dropdown-toggle-split:first-child {
    //split buttons in Tobago have a tobago-dropdown tag included, which leads to an issue with border-radius
    border-top-right-radius: var(--#{$prefix}btn-border-radius);
    border-bottom-right-radius: var(--#{$prefix}btn-border-radius);
  }
}

/* collapsible -------------------------------------------------------------- */

tobago-box.tobago-collapsed .card-body,
tobago-section.tobago-collapsed .tobago-section-content,
tobago-panel.tobago-collapsed {
  display: none;
}

/* date -------------------------------------------------------------- */

tobago-date {
  display: block;

  input {
    min-width: 7em;

    &::-ms-clear {
      /* Remove IE10's "clear field" X button */
      display: none;
    }
  }
}

.tobago-now {
  // dummy for unit tests
}

tobago-dropdown {
  @include buttonDropdownMenu();
  display: inline-block; //make tobago-dropdown height the same the inner button. Important for dropdown-menu position

  &.tobago-dropdown-submenu {
    cursor: pointer;
    position: relative;
    width: 100%;
    float: right;

    &.tobago-show {
      background-color: $dropdown-link-hover-bg;

      > .tobago-dropdown-menu:not(.tobago-disabled) {
        display: block;
      }
    }

    > .dropdown-item::after {
      content: " ";
      float: right;
      border-color: transparent;
      border-style: solid;
      border-width: 5px 0 5px 5px;
      border-left-color: #cccccc;
      margin-top: 7px;
      margin-right: -10px;
    }
  }

  &.dropdown {
    > .tobago-dropdown-menu.show {
      /* "position: fixed" must be set to override position value of
         ".navbar-expand-{sm|md|lg|xl|xxl} .navbar-nav tobago-dropdown > .tobago-dropdown-menu" */
      position: fixed;

      .tobago-dropdown-submenu {
        > .tobago-dropdown-menu {
          /* "position: fixed" must be set to override position value of
             ".navbar-expand-{sm|md|lg|xl|xxl} .navbar-nav tobago-dropdown > .tobago-dropdown-menu" */
          position: fixed;
        }
      }
    }
  }
}

.tobago-dropdown-open, .tobago-dropdown-select {
  // deprecated; must be added for test
}

tobago-file {
  display: block;

  > .input-group, tobago-progress {
    flex: 1 0 0px;
  }

  .input-group {
    > .form-control-sm ~ .input-group-text {
      padding: .25rem .5rem;
      font-size: .875rem;
    }
  }
}

/* flexLayout -------------------------------------------------------------- */

tobago-flex-layout {
  display: flex;
  min-width: 0;
  /* without this, Firefox/Webkit are different from IE:
     Set the minimal width to zero make flex-layout responsive for the width,
     even if there is overflowing content.
     currently e.g. PRE-code blocks in the demo are too wide. XXX */
  margin-left: calc(var(--tobago-flex-layout-spacing) * -0.5);
  margin-right: calc(var(--tobago-flex-layout-spacing) * -0.5);

  > * {
    margin-left: calc(var(--tobago-flex-layout-spacing) * 0.5);
    margin-right: calc(var(--tobago-flex-layout-spacing) * 0.5);
  }

  > tobago-flex-layout {
    margin-left: 0;
    margin-right: 0;
  }
}

/* the non-label-element inside of a label-layout with flex box */
.tobago-label-container {
  display: flex;
  align-items: center;

  > label:first-child {
    margin-right: var(--tobago-flex-layout-spacing);
    align-self: flex-start;
  }

  > label:last-child {
    margin-left: var(--tobago-flex-layout-spacing);
    align-self: flex-start;
  }

  > label {
    // XXX needs to be customizable
    width: 155px;
  }

  > {
    .form-control, .form-select, .form-control-plaintext,
    .input-group, .tobago-messages-container {
      flex: 1 0 0px;
    }
  }

  > .form-check {
    /* .form-check has a margin-bottom which will be normally ignored, except in a label layout
   this results in different heights for form-check components with label and itemLabel */
    margin-bottom: 0;
  }
}

tobago-flow-layout {
  &.tobago-text-justify {
    /* added here, because Bootstrap has removed .text-justify */
    text-align: justify !important;
  }

  display: block;
}

/* focus --------------------------------------------------------------- */
tobago-focus {
  display: none;
}

tobago-footer {
  --tobago-footer-padding-x: #{$container-padding-x * .5};
  --tobago-footer-padding-y: #{$navbar-padding-y};

  display: block;
  background-color: var(--#{$prefix}white);
  padding: var(--tobago-footer-padding-y) var(--tobago-footer-padding-x);
  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
}

/* form -------------------------------------------------------------- */

.tobago-form {
}

/* gridLayout -------------------------------------------------------------- */

tobago-grid-layout {
  display: -ms-grid;
  display: grid;
  border-spacing: 0;
  border-collapse: collapse;
  grid-column-gap: $spacer; // old
  column-gap: $spacer;

  .tobago-label-container > {
    textarea, .tobago-selectManyListbox {
      height: 100%;
    }
  }
}

/* header ----------------------------------------------------------- */
tobago-header {
  display: block;
}
/* ... */

